# ExampleProject

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: linked_list.h  node.h
src/: linked_list.c  main.c  node.c
test/: tests.cpp
